fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1088,19 +1088,20 @@ a {
 
 .education-item-title {
 	font-weight: var(--fw-bold);
+	width: 150%;
 	margin: 0 0 -1em 0;
 	padding: 0;
 }
 
 .education-item-info {
-	width: 130%;
+	width: 150%;
 	margin: 0;
 	padding: 0;
 }
 
 .awards {
 	font-size: var(--fs-s);
-	width: 130%;
+	width: 150%;
 	margin: 0 0 0 2em;
 	padding: 0;
 }
@@ -1113,14 +1114,20 @@ a {
 	min-width: 6em;
 }
 
+@media (min-width: 400px) {
+	.education-item-title, .education-item-info, .awards {
+		width: 130%;
+	}
+}
+
 @media (min-width: 800px) {
-	.education-item-info, .awards {
+	.education-item-title, .education-item-info, .awards {
 		width: 120%;
 	}
 }
 
 @media (min-width: 1000px) {
-	.education-item-info, .awards {
+	.education-item-title, .education-item-info, .awards {
 		width: 110%;
 	}
 }
